# IrisAnalysis

./: CVImageSource.cpp  CVImageSource.h  ImageSource.h  ImageWidget.cpp  ImageWidget.h  InputDialog.cpp  InputDialog.h  IrisAnalysis.cpp  IrisAnalysis.h  IrisAnalysis.pro  IrisAnalysisUI.cpp  IrisAnalysisUI.h  IrisAnalysisUI.ui  IrisCompare.cpp  IrisCompare.h  IrisCompare.ui  ModeDialog.cpp  ModeDialog.h  build.sh  main.cpp
cascade/: parojosG_45x11.xml
cli/: CMakeLists.txt  build.sh  testrun.sh
cli/include/: cxxopts.hpp  iris_compare_cli.hpp  utils.hpp
cli/src/: iris_compare_cli.cpp  main.cpp  utils.cpp
docker/: README.md
docker/ocv3/: Dockerfile  docker-in  docker-run.sh
docker/ocv3-qt4/: Dockerfile  docker-build.sh  docker-rm.sh  docker-run.sh
docker/ocv3-qt4/res/: docker_dev  docker_dev.pub
tests/: prepare.py  report.py  run_iriscompare.sh  run_prepare.sh  run_report.sh  run_test_bulk_iriscompare.sh  test_bulk_iriscompare.py  test_iriscompare.py
tests/templates/: html_report.jinja  testcases.jinja  yaml_report.jinja
